# easistrain

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  setup.cfg
.github/.workflows/: lint-test.yml
.github/workflows/: lint-test.yml
doc/: api.rst  conf.py  index.rst  notes.rst  reference_frames.rst  theory.rst
easistrain/: __main__.py  create_workflow.py  exe_calibration.py  exe_fitting_cleaning.py  exe_integration_2D.py  exe_lattice_d_spacing_param.py  execute_workflow.py  func_1D_Visualization.py  func_CS.py  func_CS_align.py  func_conicalslit.py  func_fitting_functions.py  func_fitting_peaks.py  func_generate_mask.py  func_get_image_matrix.py  func_integration_2D.py  func_integration_2D_OLD.py  func_lattice_d_spacing_param.py  func_plot.py  func_save_edf_image.py  func_tthdspacing.py  imgshow_bw.py  load_ini.py  log_parameters.py  task_fitting_peaks.py  task_integration_2D.py  test.json
easistrain/EDD/: EDD_Test_fund_method.py  angleCalibEDD.py  angleCalibEDD_OLD.py  calibrationEDD.py  calibrationEdd.json  calibrationEdd.py  calibrationEdd_mod.py  constants.py  coordTransformation.py  detector_fit.py  fitEDD.py  io.py  math.py  photodiodeVSpositioner.py  preStraind0cstEDD.py  regroupPoints.py  strainEDD.py  strainStressd0cstEDD.py  utils.py
easistrain/calibrants/: CeO2.d  Cr2O3.d  TiC.d  __init__.py
example_config/: angleCalibEDD.yml  calibrationEDD.yml  coordTransform.yml  fitEDD.yml  preStraind0cstEDD.yml  regroupPoints.yml  strainStressd0cstEDD.yml
example_config2/: angleCalibEDD.yml  calibEDD.yml  coordTransform_OR1.yml  coordTransform_OR2.yml  fitEDD_OR1.yml  fitEDD_OR2.yml  preStrain.yml  process.sh  regroupPoints.yml  strain.yml
scripts/: convertini.py  exe_integration_2D.ini  parameters.json  workflow.json
tests/EDD/: test_angle_calibration.py  test_calibration.py  test_coord_transform.py  test_fit.py  test_graphs.py  test_math.py  test_preStrain.py  test_regroup_points.py  test_strain.py  utils.py
tests/data/: BAIII_coord_transform.hdf5  BAIII_fit_data.hdf5  BAIII_pre_strain.hdf5  BAIII_regroup_points.hdf5  BAIII_strain.hdf5  Ba_calibration_data.hdf5  TiC_angle_calib_data.hdf5
