[metadata]
name = easistrain
version = attr: easistrain.__version__
description = Strain analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/mohamedfaresslim/easistrain
project_urls = 
    Bug Tracker = https://github.com/mohamedfaresslim/easistrain/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ewokscore
    pyfai

[options.entry_points]
console_scripts =
    easistrain = easistrain.__main__:main

[options.extras_require]
test = 
    ewokscore[test]
dev = 
    %(test)s
    black
    flake8
