[metadata]
name = easistrain
version = attr: easistrain.__version__
description = Strain analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/EASI-STRESS/easistrain
project_urls = 
    Bug Tracker = https://github.com/EASI-STRESS/easistrain/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    ewokscore
    hdf5plugin
    h5py
    numpy
    pyfai
    pyyaml~=5.0
    scipy
    silx
    typing_extensions

[options.entry_points]
console_scripts =
    easistrain = easistrain.__main__:main

[options.extras_require]
test = 
    ewokscore[test]
    pytest
dev = 
    %(test)s
    black
    bump2version
    flake8

[flake8]
max-line-length = 88
# E203, W503 disabled because incompatible with black formatting
# E262 (inline should begin by #) ignored because of numerous ## comments
# E501 (line too long) ignored because of the end-of-line comments
extend-ignore = E203, E262, E501, W503
